--- a/code_challenge/dynamic_directory_index/views/sub_list.erb
+++ b/code_challenge/dynamic_directory_index/views/sub_list.erb
@@ -1,15 +1,16 @@
 <ul>
-  <% @files.each do |file| %>
+  <% @sub_files.each do |file| %>
     <li>
       <a href="<%= file %>"><%= file %></a>
     </li>
   <% end %>
 </ul>
 
+<p><a href="/">Go Back</a></p>
 <p>
   <% if params[:sort] == "desc" %>
-    <a href="/">Sort ascending</a>
+    <a href="/fonts">Sort ascending</a>
   <% else %>
-    <a href="/?sort=desc">Sort descending</a>
+    <a href="/fonts?sort=desc">Sort descending</a>
   <% end %>
 </p>
