Current user layout refactor
added join method call

--- a/code_challenge/users_and_interests/views/current_user.erb
+++ b/code_challenge/users_and_interests/views/current_user.erb
@@ -4,7 +4,7 @@
   <p><%= @email %></p>
 
   <h4>Interests:</h4>
-  <p><%= @interests %></p>
+  <p><%= @interests.join(", ") %></p>
 
   <ul>
     <% @users.each do |name, _| %>
